src/test/deca/context/invalid/inst_return_in_void_method_float.deca
// Test la règle 3.24: Pas le droit de return quelque chose alors qu'on attend pas de return

class A  {
    void voidMethod(){
        return 3.14;
    }
}



// Resultat:

//TODOTEST